# deegtal_coding_task

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
deegtal_coding_task/: __init__.py  dataset.py  dimensionality_reduction.py  features.py  model_architecture.py  plots.py
deegtal_coding_task/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 10_overview.ipynb  1_Exploratory_Data_Analysis.ipynb  2.1_Build_CNN_Model.ipynb  2.2_Build_XGBoost_Model.ipynb  2_Build_CNN_Model.ipynb  3_XAI.ipynb  4_(Experimental)_Build_XGBoost_Model.ipynb  Build_CNN_Model.ipynb  Exploratory_Data_Analysis.ipynb
reports/: dEEGtal interview presentation - Jeroen Buil.pptx
