[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deegtal_coding_task"
version = "1.0.0"
description = "This repo stores the code and findings for the modeling task assigned to me for the job interview of AI Engineer for dEEGtal/Wyss Center."
authors = [
  { name = "Jeroen Buil" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["deegtal_coding_task"]
force_sort_within_sections = true
